package io.github.mmistika.domain;

/**
 * Task statuses.
 */
public enum TaskStatus {
    TODO,
    IN_PROGRESS,
    DONE
}
